--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -53,6 +53,7 @@ a{
 
         @media screen and  (max-width: 720px) {
             top: 0;
+            margin-bottom: 100px;
         }
     }
 
