--- a/sass/_section2.scss
+++ b/sass/_section2.scss
@@ -37,6 +37,7 @@
             text-align: center;
             width: inherit;
             display: block;
+            margin-left: 0px;
         }
     }
 
